--- a/style.css
+++ b/style.css
@@ -36,11 +36,13 @@ button {
 #reset {
     position: absolute;
     top: 174px;
-    left: 155px;
+    left: 154px;
     border-radius: 30px;
     width: 58px;
     cursor: pointer;
-    background-color: rgba(240, 248, 255, 0);
+    border: none;
+    border: 2px solid rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0);
 }
 #division {
     margin-left: 359px;
@@ -48,6 +50,7 @@ button {
     border-radius: 30px;
     width: 58px;
     cursor: pointer;
+    border: 2px solid rgb(0, 0, 0);
     background-color: rgba(240, 248, 255, 0);
 }
 #multiply {
@@ -56,6 +59,7 @@ button {
     border-radius: 30px;
     width: 58px;
     cursor: pointer;
+    border: 2px solid rgb(0, 0, 0);
     background-color: rgba(240, 248, 255, 0);
 }
 #plus {
@@ -65,6 +69,7 @@ button {
     width: 58px;
     height: 58px;
     cursor: pointer;
+    border: 2px solid rgb(0, 0, 0);
     background-color: rgba(240, 248, 255, 0);
 }
 #minus {
@@ -74,6 +79,7 @@ button {
     width: 58px;
     height: 58px;
     cursor: pointer;
+    border: 2px solid rgb(0, 0, 0);
     background-color: rgba(240, 248, 255, 0);
 }
 #result {
@@ -83,6 +89,7 @@ button {
     width: 58px;
     height: 125px;
     cursor: pointer;
+    border: 2px solid rgb(0, 0, 0);
     background-color: rgba(240, 248, 255, 0);
 }
 #out-item {
